fix letter spacing for next-post heading

--- a/src/_css/06.components/next-post.css
+++ b/src/_css/06.components/next-post.css
@@ -27,7 +27,7 @@
 		font-size: var(--font__size__heading-1);
 		line-height: 1.3;
 		font-family: var(--font__headings);
-		letter-spacing: -0.2rem;
+		letter-spacing: -.05em;
 
 		&:visited {
 			color: white;
